--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="header">Esi sveicināts ĶLUS</p>
         <hr class="line" />
         <p class="text">Tavas laboratorijas uzskaites sistēma</p>
-        <img src="assets/images/rb_13532.png" alt="" />
+        <img src="https://thlaboratory.com/assets/images/science.svg" alt="" />
       </div>
 
       <!-- Galvēnā lapa pa labi -->
@@ -126,83 +126,34 @@
           </p>
           <div>
             <input type="text" placeholder="Search" />
-            <button class="show-all-btn">Rādīt visu</button>
-            <button class="show-material-btn">Rādīt vielas</button>
-            <button class="show-equipment-btn">Rādīt aprīkojumu</button>
+            <button class="show-all-btn" id="filterAll">Rādīt visu</button>
+            <button class="show-material-btn" id="filterMaterial">
+              Rādīt vielas
+            </button>
+            <button class="show-equipment-btn" id="filterEquipment">
+              Rādīt aprīkojumu
+            </button>
           </div>
 
           <hr />
-
-          <table>
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Nosaukums</th>
-                <th>Tips</th>
-                <th>Apakštips</th>
-                <th>Skaits</th>
-                <th>Svars</th>
-                <th>Komentāri</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>KL1042724</td>
-                <td>Katalizators</td>
-                <td>Aprīkojums</td>
-                <td>Trauks</td>
-                <td>23</td>
-                <td></td>
-                <td>Daži komentāri</td>
-              </tr>
-              <tr>
-                <td>KL1042723</td>
-                <td>Birete</td>
-                <td>Aprīkojums</td>
-                <td>Trauks</td>
-                <td>20</td>
-                <td></td>
-                <td>Daži komentāri</td>
-              </tr>
-              <tr>
-                <td>KL1042742</td>
-                <td>HCI</td>
-                <td>Viela</td>
-                <td>Skābe</td>
-                <td>20</td>
-                <td>40</td>
-                <td>Daži komentāri</td>
-              </tr>
-              <tr>
-                <td>KL1042724</td>
-                <td>Kolba</td>
-                <td>Aprīkojums</td>
-                <td>Trauks</td>
-                <td>20</td>
-                <td></td>
-                <td>Daži komentāri</td>
-              </tr>
-              <tr>
-                <td>KL1042734</td>
-                <td>Fe</td>
-                <td>Viela</td>
-                <td>Metāls</td>
-                <td>48</td>
-                <td>10</td>
-                <td>Daži komentāri</td>
-              </tr>
-              <tr>
-                <td>KL1042721</td>
-                <td>Fe</td>
-                <td>Viela</td>
-                <td>Metāls</td>
-                <td>20</td>
-                <td>20</td>
-                <td>Daži komentāri</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-container">
+            <table id="inventoryTable">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Nosaukums</th>
+                  <th>Tips</th>
+                  <th>Apakštips</th>
+                  <th>Skaits</th>
+                  <th>Svars</th>
+                  <th>Komentāri</th>
+                </tr>
+              </thead>
+              <tbody class="scrollable-tbody"></tbody>
+            </table>
+          </div>
         </div>
+
         <div class="container">
           <div class="error-btn-holder">
             <div class="error-wrapper">
